<resources>

    <string name="app_name">PriceTip</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_clear">Clear</string>
    <string name="title_activity_main">Price and Tip</string>
    <string name="layout_activity_main_textview_priceTitle">Price:</string>
    <string name="layout_activity_main_textview_tipTitle">Tip</string>
    <string name="layout_activity_main_textview_totalTitle">Total:</string>
    <string name="layout_activity_main_textview_quantity">Quantity:</string>
    <string name="layout_activity_main_button_add">Add</string>
    <string name="layout_activity_main_defaultQuantity">1</string>
    <string name="layout_activity_main_defaultPrice">3.15</string>
    <string name="layout_activity_main_defaultTotal">0.00</string>
    <string name="layout_activity_main_listview_price_title">Price</string>
    <string name="layout_activity_main_textview_aftertaxTitle">Subtotal</string>
    <string name="layout_activity_main_listview_quantity_title">Quantity</string>
    <string name="setting_textview_taxrate">Tax:</string>
    <string name="setting_textview_tiprate">Tip:</string>
    <string name="setting_default_tiprate_value">10</string>
    <string name="setting_default_taxrate_value">8.75</string>
    <string name="setting_textview_percent">%</string>

</resources>