<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/layout_activity_main_listview_price_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/layout_activity_main_listview_quantity_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <ListView
        android:id="@+id/activity_main_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@android:color/holo_blue_light"
        android:minHeight="15dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/layout_activity_main_textview_priceTitle" />

        <EditText
            android:id="@+id/activity_main_edittext_singlePrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:hint="@string/layout_activity_main_defaultPrice"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/layout_activity_main_textview_quantity" />

        <EditText
            android:id="@+id/activity_main_edittext_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:hint="@string/layout_activity_main_defaultQuantity"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <Button
            android:id="@+id/activity_main_button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/layout_activity_main_button_add"
            android:width="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/holo_green_dark"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/activity_main_textview_tipTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/layout_activity_main_textview_tipTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/activity_main_textview_tipContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/layout_activity_main_defaultTotal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/activity_main_textview_afterTaxTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/layout_activity_main_textview_aftertaxTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/activity_main_textview_afterTaxContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/layout_activity_main_defaultTotal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/activity_main_textview_totalTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/layout_activity_main_textview_totalTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/activity_main_textview_totalContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/layout_activity_main_defaultTotal"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>